--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355"><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735913.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/10/AFP-construction-site-labors-320x200.jpg">【新闻看点】经济4大难题 李克强再喊压力大</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355"><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11736032.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/11/63db8cd97d000c68b20fc198e1e995f5-320x200.jpg">大陆国资系进民营银行 坏帐激增恐继续恶化</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721587.md#1">一张表看懂中美第一阶段贸易协议</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726641.md#1">薄熙来之子薄瓜瓜 最新行踪曝光</a><br>
@@ -33,6 +33,7 @@
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733911.md#1">秘鲁各界欢迎神韵莅临?中领馆干扰</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735836.md#1">习近平1个多月第三次见林郑 郑若骅在场</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735906.md#1">北京强颁“限狗令” 大批爱犬被“安乐死”</a><br>
+<a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735913.md#1">【新闻看点】经济4大难题 李克强再喊压力大</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735839.md#1">川习通电话 川普：正在安排正式签贸易协议</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733150.md#1">组图：12.19吁国际介入港人道危机游行</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735692.md#1">【名家专栏】“美中脱钩”面面观</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735723.md#1">普京：俄中既未结成军事同盟 也无结盟计划</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735719.md#1">2020年灰天鹅事件 美国对华实行资本管制</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735585.md#1">星火同盟4人获保释 律师斥港警“司马昭之心”</a><br>
-<a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735720.md#1">中共千人计划渗透又一椿 敲醒美学术界</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735851.md#1">传习近平不去达沃斯 刘鹤1月赴美签协议</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735942.md#1">通过未记录交易 创纪录数额中国资金外逃</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735874.md#1">美国会更加不信任中共 国防授权法现端倪</a><br>
@@ -88,7 +88,7 @@
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730975.md#1">德国政要支持民众《人权问责法》在线请愿</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732846.md#1">中共严重介选 叶望辉：台人有守护民主的韧性</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733201.md#1">惧反送中蔓延至大陆 粤大学禁学生年底聚会</a><br>
-<br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演">神韵古典舞表演</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党">九评共产党</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的">共产主义终极目的</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局"">中共的伪火骗局"</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例">剖析1400例</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程">通往天安门的旅程</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话">未来人的神话故事</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石">古今奇观-藏字石</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘">中共罪恶的活摘</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山">铁证如山</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政">一家四口死于暴政</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害">弟妹相继死于迫害</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死">她们被中共迫害死</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪">双城血泪</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护">无罪辩护震撼人心</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720">从610到720</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择">中共官员的选择</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相">万人上访真相</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子">被迫害的清华学子</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513">见证513</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道">功夫 寻道</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹">歌唱家的人生奇迹</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择">名校精英的选择</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事">音乐之家的故事</a><br><a href="https://d32rss5e3kjycs.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡">平凡中的不平凡</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢">善良女士被投男牢</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘">警卫目击中共活摘</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路">马克思的成魔之路</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报">303万人的举报</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差">海峡两岸强烈反差</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方">印度媒体报道东方</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园">不一样的海外校园</a><br>
+<br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演">神韵古典舞表演</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党">九评共产党</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的">共产主义终极目的</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局"">中共的伪火骗局"</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例">剖析1400例</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程">通往天安门的旅程</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话">未来人的神话故事</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石">古今奇观-藏字石</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘">中共罪恶的活摘</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山">铁证如山</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政">一家四口死于暴政</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害">弟妹相继死于迫害</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死">她们被中共迫害死</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪">双城血泪</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护">无罪辩护震撼人心</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720">从610到720</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择">中共官员的选择</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相">万人上访真相</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子">被迫害的清华学子</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513">见证513</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道">功夫 寻道</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹">歌唱家的人生奇迹</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择">名校精英的选择</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事">音乐之家的故事</a><br><a href="https://d1u6rf065juaxh.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡">平凡中的不平凡</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢">善良女士被投男牢</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘">警卫目击中共活摘</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路">马克思的成魔之路</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报">303万人的举报</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差">海峡两岸强烈反差</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方">印度媒体报道东方</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园">不一样的海外校园</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731729.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__14024792-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731729.md#1">两渝访民遭拦截 北京随处可见警方查身份证</a><br>据在京访民提供消息，近日北京重要区 ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732974.md#1">告诉人真相 法轮功学员丁宝云面临非法庭审</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731456.md#1">【唐靖远快评】中共战狼式大外宣频频触礁</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11716148.md#1">中共“奴工”买卖的罪恶（2）</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731162.md#1">中共监控每个人 深圳人：我们的生命如贱土</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730907.md#1">【新闻看点】港漂建反送中平台 大陆人力挺</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733082.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1JO2H6-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733082.md#1">华为再出局 格陵兰选爱立信打造5G网络</a><br>周四（12月19日），格陵兰国营电信运 ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730288.md#1">揽储大战 浙银行存一万元送一斤猪肉引热议</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731966.md#1">辉山乳业被强制退市 辽宁首富成“老赖”</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731433.md#1">中共对企业补贴五年翻倍 美中谈判增难度</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731081.md#1">分析：中国大陆银行挤兑增加 投资者担忧</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731327.md#1">陆房企开卖员工房 员工则担心工作不保</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732995.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/24a8ed573d1111bad553a11fcce20174-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732995.md#1">不惧中共打压 波特王蔡英文合拍第二部片发布</a><br>网路名人“波特王”日前与中华民国总 ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731683.md#1">【翻墙必看】高级五毛花千芳为何遭网民嘲讽</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732231.md#1">首阶段美中贸易协议达成后 中方采购美大豆</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732101.md#1">选前22天 台湾对抗红媒渗透 空前激战</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731657.md#1">清华大学90后共青团官员校内溺亡</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731529.md#1">脆弱美中贸易协议凸显中共内部分裂</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11727104.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188987959-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11727104.md#1">受天气影响 大陆11省逾百条高速路被封闭</a><br>大陆多地因受雨雪天气、大雾天气影响 ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731701.md#1">四川再发地震 今年至少14次地震</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729434.md#1">四川内江5.2级地震 18人受伤8千户停电</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729550.md#1">贵州煤矿事故致16死 四川渗水事故致5死</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729297.md#1">四川内江5.2级地震 周边多地有震感</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11727202.md#1">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731608.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1a21e1316d352_ttl7daySYx_bg1218-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731608.md#1">【拍案惊奇】弹劾案来龙去脉 罢免川普很难</a><br>周三中午，美国众议院开始了弹劾川普 ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734452.md#1">每日三退声明精选（2019/12/19）</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731783.md#1">加拿大升级中国旅行警告：慎防中共随意执法</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732530.md#1">西安老师连打学生耳光 家长曝全班几乎都被打</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731537.md#1">上海3家乐高中心关停 或面临倒闭潮</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731789.md#1">每日三退声明精选（2019/12/18）</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/583d10679d180759dd854d7b4f86acca-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721510.md#1">中共基因编辑打造“超级猪” 学界痛批</a><br>中共正在基因编辑领域里“赶超世界” ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721813.md#1">热依扎为角色谎称会骑马 又为圆谎落下病根</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718879.md#1">造型模仿花千骨 谢娜喊话赵丽颖：续集我接演</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11716545.md#1">迪士尼电影年票房破100亿美元 创影史纪录</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11715454.md#1">师德丧尽 北大教授与多人有不正当关系</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11712329.md#1">《假孔子之名》慕尼黑放映 揭露中共渗透</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728358.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br>香港民主运动持续进行。圣诞节将近， ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11701016.md#1">美为何点名要制裁《大公报》《文汇报》</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11716284.md#1">新闻自由恶化 中共今年监禁记者数全球第一</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11707663.md#1">美图片商配合中共建黑名单 员工请愿喊停</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9586-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br>继11月底广东茂名化州市文楼镇上万村 ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11714651.md#1">国际人权日 多位大陆维权人士被控制不能外出</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713727.md#1">参加人权日活动 美驻华大使馆前数十人被抓</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713745.md#1">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
