--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -21,7 +21,17 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank">程晓农：十二个字读懂美中经贸谈判</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/15c9f8864d19e1f7_ttl7day1IM_05-150x120.jpg" align ="left"></a>我用十二个字来解读美中经贸谈判：对川普来说，不打是打，不罚是罚；对中共来说，赢就是输。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725616.md#1" target="_blank">程晓容：澳洲政民觉醒 合力抵制中共渗透</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0Y1A5520-1-150x120.jpg" align ="left"></a>维州州长安德鲁斯越过联邦政府、擅自和中共签约。澳洲政民自发动员，正告亲共官员和中共：不许出卖维州的利益。与狼共舞的结局如何，邓森便是前车之鉴。而中共已成众矢之的，再难掩盖其邪恶居心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725021.md#1" target="_blank">洪微：美军测试中程导弹震慑中共</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725021.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190818-D-ZZ999-221-600x400-150x120.jpg" align ="left"></a>12月12日，美军在加利福尼亚州的范登堡空军基地，测试了一种常规配置的陆基（地面发射）弹道导弹。这是美国8月份退出《中导条约》后，第二次测试中程导弹，也是首枚弹道导弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11724859.md#1" target="_blank">谢田：中南海何苦悄悄的投石问路</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11724859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1079499936-150x120.jpg" align ="left"></a>美国宾夕法尼亚大学国际关系和中国历史学教授、中国问题专家林蔚博士（Arthur Waldron）披露，一名与习近平关系密切的高层幕僚透露，中共内部已经清楚的知道：“我们已经走投无路。”这是英文《大纪元》记者杨杰凯（Jan Jekielek）在“美国思想领袖”节目的专访中，林蔚给出的讯息，他认为中共非常清楚自身已死到临头.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:52 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729881.md#1" target="_blank">陈达：习近平夸林郑月娥“恪尽职守”感言</a><br></h3>中共魁首见特首，
+
+恪尽职守口特臭。
+
+民心失尽还挂匾，
+
+几近光杆夸风流。
+
+或是无可奈何应，
+
+或是同命相怜酬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729699.md#1" target="_blank">理悟：天开眼</a><br></h3>宇宙更新天体明
 众神聚焦察民情
 凭空云启开天眼
