--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -43,7 +43,7 @@
 
 朋友拿了玩具和猫食，想把小猫引出来，但没有用。女儿问朋友：“阿姨，猫咪为什么不喜欢我？”朋友赶紧解释：“猫咪没有不喜欢你，它现在有点儿‘抑郁’……”原来，朋友一家外出度假，有半个月的时间没有陪小猫，小猫再见到主人就这样躲着.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/6/n11706453.md#1" target="_blank">【品读唐诗】美在解与不解之间</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/6/n11706453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-06-at-5.58.38-PM-150x120.png" align ="left"></a>如果把生命比作一本书，我们经历的每件事或者每个阶段，就是这部书中的一个片段或者一个章回。也许当事情发生的时候，我们都不会太在意，但如果某天翻阅自己的人生书籍，你可能会发现，哪怕是普普通通的小事，都让人感觉回味无穷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11724979.md#1" target="_blank">“一元复始”古人为何贺冬至不贺夏至？</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11724979.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f3f06ef55daa27b3720bdcdcc269b969-150x120.jpg" align ="left"></a>古人为何贺冬至不贺夏至？“一元复始”为何对应冬至节？隐含什么寓意？其道理在《易经》中寻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:27 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11736362.md#1" target="_blank">诗歌： 英雄歌</a><br></h3>纵横疆场为家国 忠肝义胆壮山河 侠骨英风青史颂 浩气千古荡长歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735539.md#1" target="_blank">五律：诗（二）</a><br></h3> 抖擞重霄下，落尘天上尊。 大音发星斗，高响动乾坤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734081.md#1" target="_blank">诗歌：深冬</a><br></h3>  大雪漫漫入深冬 松柏青青笑寒风......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733039.md#1" target="_blank">五律：思念</a><br></h3> 何事长萦梦，任情千里飞。 天荒犹客老，物换岂人非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:03 AM			</td></tr>
