--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711506.md#1" target="_blank">杜彼得：愁因风雪起 隐者自怡悦</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-11-150x120.jpg" align ="left"></a>每次在脸书看到年轻一代华人，放上婴儿或正在成长幼儿的相片，我们都会仔细的观赏数回，手会情不自禁去点赞，“性之所至”还会回二句留言，给做父母的人打气。或许有人会说，喂！你是不是很无聊，可是你若从我们一直重视群体荣耀与否的角度去看，肯定会了解，“传承”对一个族裔的重要性，尤其是我们身处在美国这个大染缸的社会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711479.md#1" target="_blank">周晓辉：当北大到了高调炫耀金钱时</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2-127-150x120.jpg" align ="left"></a>大学的职责是为养育自己的社会服务，其根本目的不是为了赚钱，不是为了成为公司，不是去当国家安全的工具。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711421.md#1" target="_blank">颜丹：华为为何做不了光明正大的企业？</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1153137465-600x400-150x120.jpg" align ="left"></a>正如华为的阴险恶毒终于被无数中国人看穿，中共与生俱来的恶魔本性也终将尽显。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 12:58 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711010.md#1" target="_blank">海风：当心！海外华人亲共有风险</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711010.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190920145543100699-150x120.jpg" align ="left"></a>要过年了，按照惯例，中国政府每年都要组织海外亲共组织庆祝中国春节。政府关心海外华人，华人心系祖国。从这个角度来看，这是一种人文情怀，无可非议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:25 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11716489.md#1" target="_blank">项云：对女性禽兽不如恶魔行径戳穿中共画皮</a><br></h3>有中共起，它就响当当叫喊男女平等，批判“旧社会”欺压妇女，新社会妇女“翻身得解放”，“妇女能顶半边天”等等，似乎很尊重妇女。可是，迫害法轮功二十余年，爆料出冰山一角对女性法轮功学员的迫害，恶魔禽兽不如案例比比皆是遍及中国所有角落：毒打、酷刑、电击、针刺、剥光衣服冷冻、浇冷水、不许睡觉，强奸、轮奸；烫烙、击打和电击生理器.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11715313.md#1" target="_blank">廖祖笙：习近平快意于虐待老人和儿童？</a><br></h3>习近平先生，你说要全面建成小康社会，说要坚决打赢脱贫攻坚战……类似的表述可谓百转千回、余音绕梁，而你治下的现实，却是一次次这般耳光响亮。匪区庶民普遍是一种怎样惨淡的活法，在此姑置不论，单是我家，为了一个吃饭的问题，这回就已是第二轮向你苦苦申诉了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11715029.md#1" target="_blank">李春草：红色陷阱</a><br></h3>中央美梦霸四方，国人恐惧与日涨；
 货倾美国金满钵，命似港人纸一张；
