--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -30,7 +30,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679908.md#1" target="_blank">麦立：祝福</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679908.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/mily-1211-150x120.jpg" align ="left"></a>天地 天天祝福人类 如  旭日东昇 如  朝阳灿烂......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713340.md#1" target="_blank">何须正名</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190523023156100093-150x120.jpg" align ="left"></a>正名名焉寄，何须正名乎？我仍然想脱尽虚衔浮名，追求名号底下的那个自己，做最真实的自己。聆听自己生命里的真性情，此中的踏实自在远非浮华名号可比。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/30/n11691911.md#1" target="_blank">善听雷音的“铁罗汉”</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/30/n11691911.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/arhat-in-meditation-1-150x120.jpg" align ="left"></a>僧人忽然跳到舟上，瞬间身体缩成一尺长，向众人拱手，说了一声：“珍重！”，就随着驰骋的风帆漂流而去。当一阵鼓声大震，众人再一看，已经不见僧人踪影。回首看看几案上的盘杯，也全都消失了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11709373.md#1" target="_blank">天地清明引(132) 东流水－大疫横行1</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11709373.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/Fotolia_22324167_Subscription_L-150x120.jpg" align ="left"></a>兵部军营已有一人染病毙命，王城发全城戒严通告，一时之间，偌大的繁华之地，死寂一片。王庭各院早已闭门，太监宫女按太医指示，熏艾撒醋。礼部按照典籍记载，行祭天大典，以安王命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718633.md#1" target="_blank">五律：清晨</a><br></h3> 遥夜划鸡鸣，犬从三五声。 云岚熏晓色，草露衬时荣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718664.md#1" target="_blank">台湾古典诗：台北考棚</a><br></h3> 腾云浩气火车头，带动鹃城学术遒， 此地布金怀故老，他山攻玉萃名流；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718727.md#1" target="_blank">歌词：这里，那里</a><br></h3>善在眼睛里， 海在胸怀里， 山在脊梁里， 天在心空里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713632.md#1" target="_blank">五绝：善语慈心</a><br></h3>法指瑶台路，迷红万丈渊。 心明离桎梏，神舵度流年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:12 PM			</td></tr>
