--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11724810.md#1" target="_blank">【翻墙必看】中共将性暴虐输出到香港</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11724810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911282238292188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.从港警施暴丑闻看中共输出性暴力
+数月来，香港警察对年轻抗争者实施性暴力的丑闻不断被曝光，令港民震怒，同时，人们开始关注大陆公安武警进入港警队伍，将中共性暴力镇压民众的手段输出到香港。
+
+2.北京建了大量廉价公寓楼 为何多数无人问津
+中共目前仍然无法解决社会福利住房危机。北京虽然也建起了大量的廉价公寓，但.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725629.md#1" target="_blank">路透社曝最大客户路孚特屈从中共 封锁新闻</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-74125130-150x120.jpg" align ="left"></a>路透社指控其母公司持有股权的、也是该社最大客户的金融讯息供应商路孚特（Refinitiv）屈从中共的压力，将大量与香港反送中抗争和六四事件有关的新闻封锁，使其无法进入中国大陆境内。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725505.md#1" target="_blank">专访港大校友团麦东荣：访英的三个目的</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5-1-150x120.jpeg" align ="left"></a>香港大学校友关注组副召集人麦东荣向大纪元记者讲述了他们一行人此次访英的三个目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725432.md#1" target="_blank">港大专院校学生校友团抵英 为港人发声</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-2-150x120.jpeg" align ="left"></a>12月13日，“香港大专院校学生校友访英团”在伦敦大学亚非学院（SOAS）举行活动，声援香港人们的民众运动。来访者包括港大校友关注组副召集人麦东荣、旺角东选区候任议员林兆彬、油麻地南选区候任议员胡穗珊以及香港中文大学、理工大学、岭南大学的代表。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 3:56 PM							</td></tr>
@@ -33,7 +40,6 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/15/n11723396.md#1" target="_blank">【美国思想领袖】班农专访字幕版（中）</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/15/n11723396.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e05d030d4a1c85_ttl7day3Kd_15dfb4496b5f3de3_ttl7dayDK6_9050536f11cc1633-150x120.jpg" align ="left"></a>“在过去的20年里，中共变得更加激进，他们变得更加危险，他们变得更加腐败，他们变得更像流氓，这是为什么呢？”前白宫首席策略师史蒂夫?班农（Steve Bannon）接受了英文大纪元资深记者杨杰凯在 “美国思想领袖”系列节目中说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11722859.md#1" target="_blank">川普顾问：中方对民主党弹劾川普不感兴趣</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11722859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/1504221740092732-150x120.jpg" align ="left"></a>白宫对华贸易顾问表示，中共高官子女多美国学历，他们很清楚国会的弹劾运作，不过现在连他们也不关心民主党弹劾川普（特朗普）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11723177.md#1" target="_blank">印度提升核潜艇军力 对中共意味着什么</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11723177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1171572418-1-150x120.jpg" align ="left"></a>印度完成第一艘国产弹道导弹核潜艇“歼敌者号”（INS Arihant）的首次航行，包括BBC在内的多家媒体报导，印度将在近日进行该潜艇的核试射。如果成功，对中共来说，将构成一个严重的核威慑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11723135.md#1" target="_blank">USMCA可被视为是未来美国贸易协议模板</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11723135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1066714518-600x400-1-150x120.jpg" align ="left"></a>川普（特朗普）政府与加拿大和墨西哥近日就《美墨加贸易协定》（USMCA）的一些最后更改达成共识。美媒称，USMCA可能已成为美国与其它国家展开贸易谈判的一个模板。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11722972.md#1" target="_blank">官媒报北京高官夏林茂调任杭州市长 诡异辟谣</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11722972.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e8596354fd4a64df7b8920a32f9be2d8-150x120.jpg" align ="left"></a>正值北京官场遭到当局持续清洗之际，《北京日报》近日发布了京官夏林茂调任杭州市任职的消息，不久却罕见地发表声明“辟谣”，否认了这家省级党报刚刚公布的人事变动消息，随后多家官媒也先后删除了相关报导。不过，中共官媒的诡异动向却引起舆论关注和热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725738.md#1" target="_blank">中共军工专家李守泽突然去世 引关注</a><br></h3>日前，现年58岁的中共军工企业、中航飞机股份有限公司（下称中航飞机）副总经理李守泽去世，引外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_4.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_4.htm">http://www.epochtimes.com/gb/ncid277_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
