--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -49,7 +49,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11727014.md#1" target="_blank">独特的高行健</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11727014.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/76900b8bee8971841e48711dd52afba4-150x120.jpg" align ="left"></a>高行健幸亏出逃，先从中国，随后浪迹全世界，他幸亏深深置身于艺术与文学的实践，同时又对行将结束的这一个世纪导致人类濒临深渊的那些偌大的原则和伟大的意识形态一概拒绝，才创造了这样一部令人如此困惑又如此着迷的作品。人们终于得到了这世纪末中国小说的伟大之作，敢于揭露他那国家由中国共产党建立的极权制度而又始终不放弃最大胆的文学手.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 9:20 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679251.md#1" target="_blank">官员漠视民命 难逃悲惨结局</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679251.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1512161432382483-150x120.jpg" align ="left"></a>清朝光绪元年（1875年），因直隶芦僧河淤塞，总督李鸿章派人筹款疏浚，修筑河堤，又派某观察（官职）督办河工役事。正定府太守卢应楷担任总办，他的属下有委员数人，分别掌管局里的部分事务。丈量河身及河身旁的田地后，开始分段取土，修筑河堤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:28 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11710412.md#1" target="_blank">天地清明引(141) 东流水－浩然正气6</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11710412.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/4325af0fb8983b64fd5334fb52749c7c-150x120.jpg" align ="left"></a>堂下众人为其勇气激励，正气振奋，大声呼喝：“《满庭芳》 无罪！《满庭芳》 无罪！”众口一声，凛然无惧，正气浩然，荡荡乾坤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737381.md#1" target="_blank">诗歌：谁是我，我是谁？</a><br></h3> 死死生生复轮回，千诘百问我是谁？ 谁是我？我是谁？历史车轮滚滚推。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11730876.md#1" target="_blank">绿秧黄穗转眼过</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11730876.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/77d933a43a8a6bd122b6e30bc9e569ad-150x120.jpg" align ="left"></a>小时候虽然在北部山区长大，家附近那座小山丘常是我们小孩玩耍的地方，然而女孩子家也只敢在山脚下摘摘野花野草，办办家家酒，不敢像那些大男生勇闯森林野地，带回很多令人羡慕的野生百香果，或是一两枝卷成拳头的金绒毛野蕨，所以我应该不能算是山里来的孩子，因为国中以后，我就在繁华热闹的台北城打滚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 7:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11736362.md#1" target="_blank">诗歌：英雄歌</a><br></h3>纵横疆场为家国 忠肝义胆壮山河 侠骨英风青史颂 浩气千古荡长歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735539.md#1" target="_blank">五律：诗（二）</a><br></h3> 抖擞重霄下，落尘天上尊。 大音发星斗，高响动乾坤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734081.md#1" target="_blank">诗歌：深冬</a><br></h3>  大雪漫漫入深冬 松柏青青笑寒风......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 PM			</td></tr>
